--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "server for web and mobile app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/roshan_khan/server#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.7.5"
   }
 }
