--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "https": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.7",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "request": "^2.86.0",
